# bilbo

./: .gitignore  README.md  pyproject.toml  synth.py  train.py
bilbo/: debug.py  model.py  utils.py
bilbo/data/: augmentation.py  dataset.py
bilbo/dataset/: base.py
