[tool.poetry]
name = "bilbo"
version = "0.1.0"
description = "Bidirectional Lexical Box Organizer"
authors = ["Pooya Darvehei <pooya.darvehei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
